1) set additionalProperties = false for all components with Springfox annotation using OpenApiTransformationFilter 2) Mapped to java.lang.String instead of String to get proper documentation. 3) Made sure Spring's BasicErrorController does not show up in the Swagger Documentation.
