# src/main/resources/openApi/fraud-checker.yml
@@ -1,343 +1,28 @@
 openapi: 3.0.3
 info:
-  title: Api Documentation
-  description: Api Documentation
-  termsOfService: 'urn:tos'
-  contact: {}
+  title: FraudChecker REST API
+  description: Checks for Credit Card Frauds.
+  termsOfService: 'https://www.gnu.org/licenses/gpl-3.0.html'
+  contact:
+    name: Dhaval Dalal
+    url: 'https://dhavaldalal.wordpress.com'
+    email: dhaval@dalal.com
   license:
-    name: Apache 2.0
-    url: 'http://www.apache.org/licenses/LICENSE-2.0'
-  version: '1.0'
+    name: Copyleft License
+    url: 'https://en.wikipedia.org/wiki/Copyleft'
+  version: API v1.0
 servers:
   - url: 'http://localhost:9001'
     description: Inferred Url
 tags:
-  - name: basic-error-controller
-    description: Basic Error Controller
   - name: fraud-checker-controller
     description: Fraud Checker Controller
 paths:
-  /error:
-    get:
-      tags:
-        - basic-error-controller
-      summary: error
-      operationId: errorUsingGET
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-    put:
-      tags:
-        - basic-error-controller
-      summary: error
-      operationId: errorUsingPUT
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-    post:
-      tags:
-        - basic-error-controller
-      summary: error
-      operationId: errorUsingPOST
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-    delete:
-      tags:
-        - basic-error-controller
-      summary: error
-      operationId: errorUsingDELETE
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    options:
-      tags:
-        - basic-error-controller
-      summary: error
-      operationId: errorUsingOPTIONS
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    head:
-      tags:
-        - basic-error-controller
-      summary: error
-      operationId: errorUsingHEAD
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    patch:
-      tags:
-        - basic-error-controller
-      summary: error
-      operationId: errorUsingPATCH
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    trace:
-      tags:
-        - basic-error-controller
-      summary: error
-      operationId: errorUsingTRACE
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-  /:
-    get:
-      tags:
-        - fraud-checker-controller
-      summary: Show index page.
-      operationId: indexUsingGET
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: string
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-    put:
-      tags:
-        - fraud-checker-controller
-      summary: Show index page.
-      operationId: indexUsingPUT
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: string
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-    post:
-      tags:
-        - fraud-checker-controller
-      summary: Show index page.
-      operationId: indexUsingPOST
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: string
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-    delete:
-      tags:
-        - fraud-checker-controller
-      summary: Show index page.
-      operationId: indexUsingDELETE
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: string
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    options:
-      tags:
-        - fraud-checker-controller
-      summary: Show index page.
-      operationId: indexUsingOPTIONS
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: string
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    head:
-      tags:
-        - fraud-checker-controller
-      summary: Show index page.
-      operationId: indexUsingHEAD
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: string
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    patch:
-      tags:
-        - fraud-checker-controller
-      summary: Show index page.
-      operationId: indexUsingPATCH
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: string
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    trace:
-      tags:
-        - fraud-checker-controller
-      summary: Show index page.
-      operationId: indexUsingTRACE
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: string
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
   /check:
     post:
       tags:
         - fraud-checker-controller
-      summary: >-
-        Check possibility of a fradulent transaction and return a status to the
-        caller.
+      summary: Check possibility of a fradulent transaction and return a status to the caller.
       operationId: checkFraudUsingPOST
       requestBody:
         content:
@@ -346,7 +31,7 @@ paths:
               $ref: '#/components/schemas/FraudCheckPayload'
       responses:
         '200':
-          description: OK
+          description: Got Fraud Status for the check
           content:
             application/json:
               schema:
@@ -359,6 +44,8 @@ paths:
           description: Forbidden
         '404':
           description: Not Found
+        '500':
+          description: Internal Server Error
   /ping:
     get:
       tags:
@@ -369,7 +56,7 @@ paths:
         '200':
           description: OK
           content:
-            '*/*':
+            application/json:
               schema:
                 type: string
         '401':
@@ -382,7 +69,7 @@ paths:
     get:
       tags:
         - fraud-checker-controller
-      summary: validatePathVariable
+      summary: Validate Path Variable
       operationId: validatePathVariableUsingGET
       parameters:
         - name: id
@@ -391,6 +78,8 @@ paths:
           required: true
           style: simple
           schema:
+            maximum: 9999
+            exclusiveMaximum: false
             minimum: 5
             exclusiveMinimum: false
             type: integer
@@ -412,7 +101,7 @@ paths:
     get:
       tags:
         - fraud-checker-controller
-      summary: validateRequestParameter
+      summary: Validate Request Parameter
       operationId: validateRequestParameterUsingGET
       parameters:
         - name: param
@@ -421,6 +110,8 @@ paths:
           required: true
           style: form
           schema:
+            maximum: 9999
+            exclusiveMaximum: false
             minimum: 5
             exclusiveMinimum: false
             type: integer
@@ -451,22 +142,23 @@ components:
       type: object
       properties:
         cvv:
-          type: object
+          type: integer
           description: Card Verification Value - Must be 3 digits
-          example: '123'
+          format: int32
+          example: 123
         holderName:
           type: string
         issuingBank:
           type: string
         number:
-          type: object
-          description: >-
-            Card Number - Must be between 16 and 19 digits.  It can contain
-            non-digit characters like SPACE or a dash '-'
+          type: string
+          description: Card Number - Must be between 16 and 19 digits.  It can contain non-digit characters like SPACE or a dash '-'
           example: 4485-2847-2013-4093
         validUntil:
           type: string
+          description: Expiry Date of the Card
           format: date-time
+      additionalProperties: false
     FraudCheckPayload:
       title: FraudCheckPayload
       required:
@@ -478,6 +170,7 @@ components:
           $ref: '#/components/schemas/Money'
         creditCard:
           $ref: '#/components/schemas/CreditCard'
+      additionalProperties: false
     FraudStatus:
       title: FraudStatus
       type: object
@@ -488,95 +181,7 @@ components:
           type: string
         overall:
           type: string
-    ModelAndView:
-      title: ModelAndView
-      type: object
-      properties:
-        empty:
-          type: boolean
-        model:
-          type: object
-        modelMap:
-          type: object
-          additionalProperties:
-            type: object
-        reference:
-          type: boolean
-        status:
-          type: string
-          enum:
-            - ACCEPTED
-            - ALREADY_REPORTED
-            - BAD_GATEWAY
-            - BAD_REQUEST
-            - BANDWIDTH_LIMIT_EXCEEDED
-            - CHECKPOINT
-            - CONFLICT
-            - CONTINUE
-            - CREATED
-            - DESTINATION_LOCKED
-            - EXPECTATION_FAILED
-            - FAILED_DEPENDENCY
-            - FORBIDDEN
-            - FOUND
-            - GATEWAY_TIMEOUT
-            - GONE
-            - HTTP_VERSION_NOT_SUPPORTED
-            - IM_USED
-            - INSUFFICIENT_SPACE_ON_RESOURCE
-            - INSUFFICIENT_STORAGE
-            - INTERNAL_SERVER_ERROR
-            - I_AM_A_TEAPOT
-            - LENGTH_REQUIRED
-            - LOCKED
-            - LOOP_DETECTED
-            - METHOD_FAILURE
-            - METHOD_NOT_ALLOWED
-            - MOVED_PERMANENTLY
-            - MOVED_TEMPORARILY
-            - MULTIPLE_CHOICES
-            - MULTI_STATUS
-            - NETWORK_AUTHENTICATION_REQUIRED
-            - NON_AUTHORITATIVE_INFORMATION
-            - NOT_ACCEPTABLE
-            - NOT_EXTENDED
-            - NOT_FOUND
-            - NOT_IMPLEMENTED
-            - NOT_MODIFIED
-            - NO_CONTENT
-            - OK
-            - PARTIAL_CONTENT
-            - PAYLOAD_TOO_LARGE
-            - PAYMENT_REQUIRED
-            - PERMANENT_REDIRECT
-            - PRECONDITION_FAILED
-            - PRECONDITION_REQUIRED
-            - PROCESSING
-            - PROXY_AUTHENTICATION_REQUIRED
-            - REQUESTED_RANGE_NOT_SATISFIABLE
-            - REQUEST_ENTITY_TOO_LARGE
-            - REQUEST_HEADER_FIELDS_TOO_LARGE
-            - REQUEST_TIMEOUT
-            - REQUEST_URI_TOO_LONG
-            - RESET_CONTENT
-            - SEE_OTHER
-            - SERVICE_UNAVAILABLE
-            - SWITCHING_PROTOCOLS
-            - TEMPORARY_REDIRECT
-            - TOO_EARLY
-            - TOO_MANY_REQUESTS
-            - UNAUTHORIZED
-            - UNAVAILABLE_FOR_LEGAL_REASONS
-            - UNPROCESSABLE_ENTITY
-            - UNSUPPORTED_MEDIA_TYPE
-            - UPGRADE_REQUIRED
-            - URI_TOO_LONG
-            - USE_PROXY
-            - VARIANT_ALSO_NEGOTIATES
-        view:
-          $ref: '#/components/schemas/View'
-        viewName:
-          type: string
+      additionalProperties: false
     Money:
       title: Money
       required:
@@ -586,14 +191,11 @@ components:
       properties:
         amount:
           type: number
+          description: Amount of the transaction
           format: double
+          example: 1234.56
         currency:
-          type: object
+          type: string
           description: Currency of the transaction
           example: INR
-    View:
-      title: View
-      type: object
-      properties:
-        contentType:
-          type: string
+      additionalProperties: false
